
0.6.0 -

  * added --no-daemon and --pid-file
  * added --no-proxy to disable the proxy 
  * added testcases 
  * added support for proxy.response.packets
  * added hooks for read_auth(), read_handshake() and read_auth_result()
  * added support in read_query_result() to overwrite the result-set
  * added connection pooling

  * fixed decoding of len-encoded ints for 3-byte notation
  * fixed check for glib2 to require at least 2.6.0
  * fixed mem-leak with proxy.response.* is used
  * fixed handling of (SQL) NULL in result-sets
  * fixed inj.resultset.affected_rows on SELECT queries
  * fixed len-encoding on proxy.resulsets
  * fixed assertion when all backends are down and we try to connect
  * fixed assertion when connection to the MySQL 6.0.1
  * fixed crash if proxy.connection is used in connect_server()
  * fixed connection-stalling if read_query_result() throws an assert()ion
  * fixed assertion at COM_SHUTDOWN (#29719)
  * fixed assertion at login with empty password + empty default db (#29719)
  * fixed assertion on result-packets like 
    [ field-len | fields | EOF | ERR ] (#29732)
  * fixed compilation on win32
  * fixed assertion on COM_BINLOG_DUMP (#29764)
  

0.5.1 - 2007-06-30

  * added script examples for rewriting and injection
  * added support for UNIX sockets
  * added protection against duplicate resultsets from a script
  * added missing dependency to libmysqlclient-dev to the INSTALL file
  * added support for pre-4.1 passwords in a 4.1 connection
  * added inj.query_time and inj.response_time into the lua scripts
  * added resultset.affected_rows and resultset.insert_id
  * added proxy.VERSION

  * changed --proxy.profiling to --proxy-skip-profiling

  * fixed assertion when read_query_result() is not provided 
    when PROXY_SEND_QUERY is used
  * fixed warning if connect_server() is not provided
  * fixed handling of duplicate ERR on COM_CHANGE_USER in MySQL 5.1.18+
  * fixed compile error with MySQL 4.1.x on missing COM_STMT_*