@@ -8,6 +8,7 @@
   * added hooks for read_auth(), read_handshake() and read_auth_result()
   * added support in read_query_result() to overwrite the result-set
   * added connection pooling
+  * added a global lua-scope proxy.global.* 
 
   * fixed decoding of len-encoded ints for 3-byte notation
   * fixed check for glib2 to require at least 2.6.0
